Implemented backend for signing in, signing up, cart functionality with order placing (later need to be extended with payment page etc.), wishlist routes controllers need to be created, refactored structure of routers

--- a/.env
+++ b/.env
@@ -1,6 +1,2 @@
-DB_NAME=ksiegarnia
-DB_HOST=localhost
-DB_USERNAME=root
-DB_PASSWORD=
-DB_PORT=3306
+MONGO_URI=mongodb://localhost:27017/bookhaven
 SESSION_SECRET=4444
