--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
-    "md5": "^2.3.0"
+    "md5": "^2.3.0",
+    "mongoose": "^8.9.3"
   }
 }
