--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "md5": "^2.3.0",
-    "mongoose": "^8.9.3"
+    "mongoose": "^8.9.3",
+    "multer": "1.4.5-lts.1"
   }
 }
