feat: Integrate Supabase for file storage and retrieval
- Added Supabase storage service for handling file uploads and signed URLs.
- Updated orderController to generate signed URLs for invoice downloads.
- Refactored userController to upload user avatars to Supabase.
- Enhanced invoiceService to upload generated invoices to Supabase.
- Modified userService to delete user avatars from Supabase storage.
- Updated attachUser middleware to generate signed URLs for user avatars.
- Improved authMiddleware for better JWT handling.
- Added avatarPath to user model for storing avatar file paths.
- Updated order confirmation page to reflect changes in order and payment details.
- Added new storageService.js for managing Supabase interactions.
- Updated package.json and pnpm-lock.yaml to include Supabase dependencies.

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,13 @@ JWT_SECRET=your-secret-key
 
 #Secret key for JWT refresh
 JWT_REFRESH_SECRET=your-secret-refresh-key
+
+#Supabase configuration
+SUPABASE_URL=https://your-project.supabase.co
+# Prefer a service role key for server-side uploads; fallback to anon key if bucket is public
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_AVATARS_BUCKET=avatars
+SUPABASE_INVOICES_BUCKET=invoices
+# Set to true only if the avatars bucket has public read access
+SUPABASE_AVATARS_PUBLIC=false
