--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
+    "@supabase/supabase-js": "^2.45.4",
     "mongoose": "^8.9.3",
     "multer": "1.4.5-lts.1",
     "pdfkit": "^0.17.0"
